New GUC to inherit storage options with ALTER TABLE ADD PARTITION
When a new partitioned table is created, its partitions inherit storage options
(appendonly, orientation, compresstype, compresslevel and blocksize)
from the parent table.
But when adding partitions using the ALTER TABLE ADD PARTITION command,
new partitions are added with storage options as specified in
gp_default_storage_options (unless these options are explicitly specified
in the DDL or subpartition template).

This patch adds a new GUC gp_add_partition_inherits_table_setting
with the default value false.
When set to true, the ALTER TABLE ADD PARTITION command will add new partitions
with storage options inherited from the parent table (unless these options
are explicitly specified in the DDL or subpartition template).

--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -77,6 +77,7 @@
             <topicref href="guc-list.xml#extra_float_digits"/>
             <topicref href="guc-list.xml#from_collapse_limit"/>
             <topicref href="guc-list.xml#gp_add_column_inherits_table_setting"/>
+            <topicref href="guc-list.xml#gp_add_partition_inherits_table_setting"/>
             <topicref href="guc-list.xml#gp_adjust_selectivity_for_outerjoins"/>
             <topicref href="guc-list.xml#gp_appendonly_compaction"/>
             <topicref href="guc-list.xml#gp_appendonly_compaction_threshold"/>
